--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port=8080
 
 # PostgreSQL DataSource Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/twentythree_db
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
 spring.datasource.username=postgres
-spring.datasource.password=2288
+spring.datasource.password=DpJMcxfJObAiQnKdYxIOJvSVbzBqKdjt
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
